samples/errors/condition-not-bool.stkn
func conjunction_check(x)
    condition: x && true

conjunction_check(0)

func condition_check(x)
    if x
        return
    write(false)

condition_check(0)
